fix footer overflow problem on Firefox (resolves #26)

--- a/css/home-page.styl
+++ b/css/home-page.styl
@@ -1,7 +1,8 @@
 .home-page
   color #fff
   font-family MAIN_FONT_FAMILY
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing antialiased
+  min-height 630px
 
   .content-block
     display table
